--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>MarkBook – GPA Calculator</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #eef3f7;
+    }
+
+    input, button {
+      font-size: 1rem;
     }
 
     .welcome-page {
@@ -22,12 +31,13 @@
 
     .welcome-box {
       background-color: white;
-      padding: 40px;
-      border-radius: 15px;
+      padding: 2rem;
+      border-radius: 1rem;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
       text-align: center;
       width: 100%;
       max-width: 400px;
+      transition: all 0.3s ease;
     }
 
     .main-content {
@@ -35,12 +45,17 @@
       flex-direction: column;
       padding: 20px;
       position: relative;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
     .top-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
     }
 
     .box {
@@ -49,30 +64,31 @@
       margin-bottom: 15px;
       border-radius: 10px;
       box-shadow: 0 0 10px #ccc;
+      width: 100%;
     }
 
     input {
-      padding: 8px;
+      padding: 0.8rem;
       margin: 5px 0;
-      width: calc(100% - 12px);
+      width: 100%;
       max-width: 100%;
     }
 
     button {
-      padding: 10px 20px;
+      padding: 0.8rem 1.2rem;
       background-color: #4caf50;
       color: white;
       border: none;
       border-radius: 5px;
       margin-top: 10px;
       cursor: pointer;
+      font-size: 1rem;
     }
 
     .btn-red { background-color: crimson; }
     .btn-blue { background-color: dodgerblue; }
     .btn-grey { background-color: #555; }
 
-    /* SUBJECT INPUT FLEX STYLE */
     .subject-row {
       display: flex;
       gap: 10px;
@@ -82,7 +98,7 @@
 
     .subject-input, .mark-input {
       flex: 1;
-      min-width: 120px;
+      min-width: 140px;
     }
 
     .subject-input label,
@@ -93,7 +109,6 @@
       font-weight: bold;
     }
 
-    /* HISTORY STYLE */
     .history-item {
       position: relative;
       background: #f7f7f7;
@@ -101,6 +116,7 @@
       border-radius: 10px;
       margin-bottom: 10px;
       box-shadow: 0 0 6px #ccc;
+      width: 100%;
     }
 
     .history-item .menu {
@@ -157,16 +173,43 @@
       padding: 8px;
     }
 
+    /* 📱 Responsive Rules */
+    @media (max-width: 767px) {
+      .welcome-box, .box, .history-item {
+        padding: 1rem;
+      }
+
+      .subject-input, .mark-input {
+        flex: 1 1 100%;
+      }
+
+      .top-bar h2 {
+        font-size: 1.2rem;
+      }
+
+      button, input {
+        font-size: 0.95rem;
+      }
+
+      .subject-row {
+        flex-direction: column;
+      }
+    }
+
     @media (min-width: 768px) {
       .main-content {
         padding: 40px;
+      }
+
+      .subject-row {
+        flex-direction: row;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- WELCOME SCREEN -->
+  <!-- WELCOME PAGE -->
   <div class="welcome-page" id="welcomePage">
     <div class="welcome-box">
       <h1>📘 Welcome to MarkBook</h1>
@@ -177,10 +220,9 @@
     </div>
   </div>
 
-  <!-- MAIN APP -->
+  <!-- MAIN CONTENT -->
   <div class="main-content" id="mainContent">
 
-    <!-- Top Bar with History Menu -->
     <div class="top-bar">
       <h2>🎓 GPA Calculator for <span id="displayName"></span></h2>
       <button class="menu" onclick="toggleGlobalHistoryMenu()">⋮</button>
@@ -427,7 +469,6 @@
       Object.keys(semGPA).forEach(key => delete semGPA[key]);
     }
 
-    // Close ⋮ history menu if clicked outside
     document.addEventListener("click", function (e) {
       const menuBtn = document.querySelector(".menu");
       const dropdown = document.getElementById("globalHistoryMenu");
